--- a/interface/index.html
+++ b/interface/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="png" href="src/assets/imgLogoProSaude.png" />
+    <link rel="icon" type="png" href="interface/docs/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rank S</title>
+    <title>TreinoTotal - ProSaúde Academia</title>
   </head>
   <body>
     <div id="root"></div>
